feat: wire comments into desktop app, persistence, and versioning
- Add local comments panel + indicator + hover tooltip in desktop grid demo\n- Provide Yjs doc localStorage persistence helpers and tests\n- Include comments root in Yjs versioning adapter snapshots\n- Fix zip FileOptions type regression in xlsx print writer

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -54,11 +54,20 @@
         border-top: 1px solid #d4d4d4;
         background: #f7f7f7;
         font-size: 12px;
+        align-items: center;
       }
 
       .statusbar code {
         font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
           monospace;
+      }
+
+      .statusbar button {
+        padding: 4px 8px;
+        border: 1px solid #d4d4d4;
+        background: #ffffff;
+        border-radius: 6px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -78,9 +87,9 @@
           Value:
           <code data-testid="active-value"></code>
         </div>
+        <button type="button" data-testid="open-comments-panel">Comments</button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
-
