--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -67,8 +67,7 @@
         overflow: auto;
         font: 14px/20px ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
           monospace;
-        white-space: pre-wrap;
-        word-break: break-word;
+        white-space: pre;
       }
 
       .formula-bar-input {
