feat(formula-bar): add AI ghost text hook and Tab accept
- Render AI suggestion text as a ghost tail when caret is at end\n- Accept pending suggestion via Tab key\n- Add unit coverage for FormulaBarModel AI suggestion insertion

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -117,6 +117,10 @@
         font-weight: 600;
       }
 
+      .formula-bar-highlight .formula-bar-ghost {
+        color: rgba(17, 24, 39, 0.35);
+      }
+
       .formula-bar-hint {
         font-size: 12px;
         color: #374151;
