feat(desktop): render chart SVGs as floating overlay
- Add a chart overlay layer in the desktop grid and render a demo bar chart using the new chart SVG renderer
- Wire chart rerendering on resize and edits so visuals update with source data changes
- Add chart-layer styling so charts sit between the grid and selection/reference overlays

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -214,6 +214,13 @@
         background: #f0f0f0;
       }
 
+      .chart-layer {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+      }
       .cell-editor {
         position: absolute;
         box-sizing: border-box;
