feat(desktop): add Macros panel UI hook

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -288,6 +288,7 @@
         <button type="button" data-testid="split-horizontal">Split horizontal</button>
         <button type="button" data-testid="split-none">Unsplit</button>
         <button type="button" data-testid="open-ai-panel">AI panel</button>
+        <button type="button" data-testid="open-macros-panel">Macros</button>
         <button type="button" data-testid="open-comments-panel">Comments</button>
       </div>
     </div>
