style(formula-bar): make textarea selection translucent for overlay highlight

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -87,6 +87,10 @@
         overflow: auto;
       }
 
+      .formula-bar-input::selection {
+        background: rgba(14, 101, 235, 0.25);
+      }
+
       .formula-bar-highlight span[data-kind="function"] {
         color: #0e65eb;
         font-weight: 600;
