--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -278,27 +278,28 @@
           ></div>
         </div>
       </div>
-      <div class="statusbar">
-        <div>
-          Active:
-          <code data-testid="active-cell">A1</code>
+       <div class="statusbar">
+         <div>
+           Active:
+           <code data-testid="active-cell">A1</code>
+         </div>
+         <div>
+           Selection:
+           <code data-testid="selection-range">A1</code>
+         </div>
+         <div>
+           Value:
+            <code data-testid="active-value"></code>
+          </div>
+          <button type="button" data-testid="split-vertical">Split vertical</button>
+          <button type="button" data-testid="split-horizontal">Split horizontal</button>
+          <button type="button" data-testid="split-none">Unsplit</button>
+          <button type="button" data-testid="open-ai-panel">AI panel</button>
+          <button type="button" data-testid="open-macros-panel">Macros</button>
+          <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
+          <button type="button" data-testid="open-comments-panel">Comments</button>
         </div>
-        <div>
-          Selection:
-          <code data-testid="selection-range">A1</code>
-        </div>
-        <div>
-          Value:
-          <code data-testid="active-value"></code>
-        </div>
-        <button type="button" data-testid="split-vertical">Split vertical</button>
-        <button type="button" data-testid="split-horizontal">Split horizontal</button>
-        <button type="button" data-testid="split-none">Unsplit</button>
-        <button type="button" data-testid="open-ai-panel">AI panel</button>
-        <button type="button" data-testid="open-macros-panel">Macros</button>
-        <button type="button" data-testid="open-comments-panel">Comments</button>
       </div>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+      <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
