feat(desktop): add AI audit log panel + export
- Add dockable AI_AUDIT panel (registry + shell toggle) to view LocalStorageAIAuditStore entries with filters\n- Support exporting the currently visible entries as a JSON download (plus unit test)\n- Render the audit panel via the shared panelBodyRenderer; add jsdom UI test for seeded entries\n- Harden LocalStorageAIAuditStore for Node/webstorage environments (safe detection + reliable memory fallback)\n- Extend runChatWithToolsAudited with optional tool-call hooks + LLM request params forwarding\n- Keep CI installs green: update pnpm-lock.yaml and guard node\u2019s experimental localStorage in ai-chat panel mount test

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -323,15 +323,16 @@
            Value:
             <code data-testid="active-value"></code>
           </div>
-          <button type="button" data-testid="split-vertical">Split vertical</button>
-          <button type="button" data-testid="split-horizontal">Split horizontal</button>
-          <button type="button" data-testid="split-none">Unsplit</button>
-          <button type="button" data-testid="open-ai-panel">AI panel</button>
-          <button type="button" data-testid="open-macros-panel">Macros</button>
-          <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
-          <button type="button" data-testid="open-comments-panel">Comments</button>
-        </div>
-      </div>
+           <button type="button" data-testid="split-vertical">Split vertical</button>
+           <button type="button" data-testid="split-horizontal">Split horizontal</button>
+           <button type="button" data-testid="split-none">Unsplit</button>
+           <button type="button" data-testid="open-ai-panel">AI panel</button>
+           <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
+           <button type="button" data-testid="open-macros-panel">Macros</button>
+           <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
+           <button type="button" data-testid="open-comments-panel">Comments</button>
+         </div>
+       </div>
       <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
