feat(desktop): mount Script Editor panel with web runtime
- Wire PanelIds.SCRIPT_EDITOR into the demo desktop shell with mount/dispose tracking

- Add DocumentController-backed workbook adapter that reflects active sheet + selection

- Use @formula/scripting/web Web Worker runtime from ScriptEditorPanel

- Add Scripts toggle button and Playwright smoke test that runs code and writes a cell

- Make the script editor e2e resilient to one-time Vite dependency-optimization reloads

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -309,7 +309,7 @@
             aria-label="Secondary spreadsheet grid"
           ></div>
         </div>
-      </div>
+       </div>
        <div class="statusbar">
          <div>
            Active:
@@ -321,17 +321,17 @@
          </div>
          <div>
            Value:
-            <code data-testid="active-value"></code>
-          </div>
-           <button type="button" data-testid="split-vertical">Split vertical</button>
-           <button type="button" data-testid="split-horizontal">Split horizontal</button>
-           <button type="button" data-testid="split-none">Unsplit</button>
-           <button type="button" data-testid="open-ai-panel">AI panel</button>
-           <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
-           <button type="button" data-testid="open-macros-panel">Macros</button>
-           <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
-           <button type="button" data-testid="open-comments-panel">Comments</button>
+           <code data-testid="active-value"></code>
          </div>
+         <button type="button" data-testid="split-vertical">Split vertical</button>
+         <button type="button" data-testid="split-horizontal">Split horizontal</button>
+         <button type="button" data-testid="split-none">Unsplit</button>
+         <button type="button" data-testid="open-ai-panel">AI panel</button>
+         <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
+         <button type="button" data-testid="open-macros-panel">Macros</button>
+         <button type="button" data-testid="open-script-editor-panel">Scripts</button>
+         <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
+         <button type="button" data-testid="open-comments-panel">Comments</button>
        </div>
       <script type="module" src="/src/main.ts"></script>
   </body>
