test(desktop): emulate Tauri CSP in e2e and cover WASM+workers
- Serve the Tauri CSP header from Vite during Playwright runs to catch CSP regressions.
- Add an e2e smoke test that compiles a tiny WASM module on the main thread and inside a module Worker.
- Make scripting-test.html CSP-safe by moving its inline module script to /src/scripting-test.ts.
- Add a vitest guard asserting tauri.conf.json includes wasm-unsafe-eval + worker-src.

--- a/apps/desktop/scripting-test.html
+++ b/apps/desktop/scripting-test.html
@@ -7,9 +7,6 @@
   </head>
   <body>
     <main>Scripting runtime test page</main>
-    <script type="module">
-      import { ScriptRuntime, Workbook } from "@formula/scripting/web";
-      globalThis.__formulaScripting = { ScriptRuntime, Workbook };
-    </script>
+    <script type="module" src="/src/scripting-test.ts"></script>
   </body>
 </html>
