feat(desktop): wire Tauri workbook I/O + events into UI
- Add TauriWorkbookBackend wrapper for workbook commands\n- Listen for "file-dropped" + "unsaved-changes" events to open workbooks and prompt on close\n- Load workbook cell inputs into DocumentController, render, and add a simple sheet switcher\n- Sync DocumentController edits back to the host (set_cell/set_range) so save_workbook persists changes\n- Add Playwright e2e coverage for file-dropped loading and fix existing e2e click offsets/persistence

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -288,6 +288,13 @@
         border-radius: 6px;
         cursor: pointer;
       }
+
+      .statusbar select {
+        padding: 4px 8px;
+        border: 1px solid #d4d4d4;
+        background: #ffffff;
+        border-radius: 6px;
+      }
     </style>
   </head>
   <body>
@@ -314,6 +321,10 @@
          <div>
            Active:
            <code data-testid="active-cell">A1</code>
+         </div>
+         <div>
+           Sheet:
+           <select data-testid="sheet-switcher"></select>
          </div>
          <div>
            Selection:
