feat(desktop): wire up Python panel backed by Pyodide
- Add a dev-shell toggle button for the Python panel

- Lazily mount a minimal textarea + Run UI that executes via PyodideRuntime

- Bridge scripts to the active DocumentController sheet through DocumentControllerBridge

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -368,6 +368,7 @@
         <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
         <button type="button" data-testid="open-macros-panel">Macros</button>
         <button type="button" data-testid="open-script-editor-panel">Scripts</button>
+        <button type="button" data-testid="open-python-panel">Python</button>
         <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
         <button type="button" data-testid="open-comments-panel">Comments</button>
       </div>
