chore(web+grid-dev): align demo UI colors with grid theme vars
- Set body background/text to grid CSS variables in web + grid dev pages

- Use grid CSS vars for web demo chrome + cell editor overlay colors

--- a/packages/grid/index.html
+++ b/packages/grid/index.html
@@ -70,6 +70,11 @@
           --formula-grid-remote-presence-default: Highlight;
         }
       }
+
+      body {
+        background: var(--formula-grid-bg);
+        color: var(--formula-grid-cell-text);
+      }
     </style>
   </head>
   <body>
