--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -62,6 +62,12 @@
           --formula-grid-remote-presence-default: Highlight;
         }
       }
+
+      body {
+        margin: 0;
+        background: var(--formula-grid-bg);
+        color: var(--formula-grid-cell-text);
+      }
     </style>
   </head>
   <body>
