--- a/packages/grid/index.html
+++ b/packages/grid/index.html
@@ -14,6 +14,7 @@
       }
 
       :root {
+        color-scheme: light;
         --formula-grid-bg: #ffffff;
         --formula-grid-line: #e6e6e6;
         --formula-grid-header-bg: #f8fafc;
@@ -33,6 +34,7 @@
 
       @media (prefers-color-scheme: dark) {
         :root {
+          color-scheme: dark;
           --formula-grid-bg: #0b1220;
           --formula-grid-line: rgba(255, 255, 255, 0.12);
           --formula-grid-header-bg: #0f172a;
@@ -53,21 +55,44 @@
 
       @media (prefers-contrast: more) {
         :root {
-          --formula-grid-bg: Canvas;
           --formula-grid-selection-fill: transparent;
-          --formula-grid-selection-border: Highlight;
-          --formula-grid-selection-handle: Highlight;
-          --formula-grid-line: CanvasText;
-          --formula-grid-header-bg: Canvas;
-          --formula-grid-header-text: CanvasText;
-          --formula-grid-cell-text: CanvasText;
-          --formula-grid-error-text: CanvasText;
-          --formula-grid-scrollbar-track: Canvas;
-          --formula-grid-scrollbar-thumb: CanvasText;
-          --formula-grid-freeze-line: CanvasText;
-          --formula-grid-comment-indicator: CanvasText;
-          --formula-grid-comment-indicator-resolved: CanvasText;
-          --formula-grid-remote-presence-default: Highlight;
+          --formula-grid-selection-border: #000000;
+          --formula-grid-selection-handle: #000000;
+          --formula-grid-line: #000000;
+          --formula-grid-scrollbar-thumb: #000000;
+          --formula-grid-freeze-line: #000000;
+        }
+      }
+
+      @media (prefers-contrast: more) and (prefers-color-scheme: dark) {
+        :root {
+          --formula-grid-selection-border: #ffffff;
+          --formula-grid-selection-handle: #ffffff;
+          --formula-grid-line: rgba(255, 255, 255, 0.8);
+          --formula-grid-scrollbar-thumb: #ffffff;
+          --formula-grid-freeze-line: #ffffff;
+        }
+      }
+
+      @supports (color: CanvasText) {
+        @media (prefers-contrast: more) {
+          :root {
+            --formula-grid-bg: Canvas;
+            --formula-grid-selection-fill: transparent;
+            --formula-grid-selection-border: Highlight;
+            --formula-grid-selection-handle: Highlight;
+            --formula-grid-line: CanvasText;
+            --formula-grid-header-bg: Canvas;
+            --formula-grid-header-text: CanvasText;
+            --formula-grid-cell-text: CanvasText;
+            --formula-grid-error-text: CanvasText;
+            --formula-grid-scrollbar-track: Canvas;
+            --formula-grid-scrollbar-thumb: CanvasText;
+            --formula-grid-freeze-line: CanvasText;
+            --formula-grid-comment-indicator: CanvasText;
+            --formula-grid-comment-indicator-resolved: CanvasText;
+            --formula-grid-remote-presence-default: Highlight;
+          }
         }
       }
 
