feat: Excel-style formula reference colors and grid overlays
- Add shared reference extraction + deterministic palette (with tests)
- Colorize reference spans in desktop formula bar and track active ref for replacement
- Render multi-range colored dashed overlays on desktop grid
- Extend @formula/grid with setReferenceHighlights API and render dashed overlays
- Wire web preview to show multi-reference highlights + replace active reference on drag

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -104,6 +104,12 @@
         color: #7c3aed;
       }
 
+      .formula-bar-highlight span.formula-bar-reference--active {
+        text-decoration: underline;
+        text-decoration-thickness: 2px;
+        text-underline-offset: 2px;
+      }
+
       .formula-bar-highlight span[data-kind="string"] {
         color: #b45309;
       }
