feat(desktop): make extension contributions usable (panels, commands, menus)
- Replace static panel registry with runtime registration so extension panels persist in layouts

- Render extension panels as sandboxed iframes (allow-scripts only) with a postMessage bridge

- Add an Extensions panel UI to list/execute contributed commands and open contributed panels

- Delegate showMessage/showQuickPick/showInputBox from the host to real desktop UI

- Add when-clause evaluator + context keys to enable extension keybindings/context menus

- Add e2e + unit coverage and document the supported desktop UX + sandbox model

- Fix strict import sandbox to allow Vite-dev /@fs rewrite of @formula/extension-api

- Bump Playwright timeout to 60s to survive first-run Vite optimization under CI load

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -375,10 +375,12 @@
         <button type="button" data-testid="open-macros-panel">Macros</button>
         <button type="button" data-testid="open-script-editor-panel">Scripts</button>
         <button type="button" data-testid="open-python-panel">Python</button>
+        <button type="button" data-testid="open-extensions-panel">Extensions</button>
         <button type="button" data-testid="open-vba-migrate-panel">Migrate Macros</button>
         <button type="button" data-testid="open-comments-panel">Comments</button>
       </div>
     </div>
+    <div id="toast-root" data-testid="toast-root" aria-live="polite" aria-atomic="true"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
