feat(desktop): integrate shared @formula/grid renderer behind flag
- Add DesktopSharedGrid + DocumentCellProvider to drive CanvasGridRenderer imperatively\n- Add ?grid=shared|legacy switch (env fallbacks) and wire into SpreadsheetApp\n- Keep legacy renderer intact; shared mode supports selection/edit/scroll/resize + overlays\n- Add Playwright coverage for both modes and an opt-in perf smoke test\n- Make DLP audit logger browser-safe; harden whenIdle/computed-value handling for e2e

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -300,12 +300,14 @@
 
       .statusbar {
         display: flex;
+        flex-wrap: wrap;
         gap: 16px;
         padding: 8px 12px;
         border-top: 1px solid #d4d4d4;
         background: #f7f7f7;
         font-size: 12px;
         align-items: center;
+        min-width: 0;
       }
 
       .statusbar code {
