feat: add freeze panes with per-sheet persistence
- Store per-sheet {frozenRows,frozenCols} in DocumentController snapshots + undo history
- Preserve/merge sheet view state in BranchService sheet metadata
- Add desktop freeze/unfreeze actions (toolbar + command palette) and grid quadrant rendering/hit-testing
- Add web preview controls + command palette
- Add unit + e2e coverage for freeze panes

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -365,16 +365,20 @@
           Selection:
           <code data-testid="selection-range">A1</code>
         </div>
-         <div>
-           Value:
-           <code data-testid="active-value"></code>
-         </div>
-         <button type="button" data-testid="audit-precedents">Trace precedents</button>
-         <button type="button" data-testid="audit-dependents">Trace dependents</button>
-         <button type="button" data-testid="audit-transitive">Transitive</button>
-         <button type="button" data-testid="split-vertical">Split vertical</button>
-         <button type="button" data-testid="split-horizontal">Split horizontal</button>
-         <button type="button" data-testid="split-none">Unsplit</button>
+        <div>
+          Value:
+          <code data-testid="active-value"></code>
+        </div>
+        <button type="button" data-testid="audit-precedents">Trace precedents</button>
+        <button type="button" data-testid="audit-dependents">Trace dependents</button>
+        <button type="button" data-testid="audit-transitive">Transitive</button>
+        <button type="button" data-testid="split-vertical">Split vertical</button>
+        <button type="button" data-testid="split-horizontal">Split horizontal</button>
+        <button type="button" data-testid="split-none">Unsplit</button>
+        <button type="button" data-testid="freeze-panes">Freeze Panes</button>
+        <button type="button" data-testid="freeze-top-row">Freeze Top Row</button>
+        <button type="button" data-testid="freeze-first-column">Freeze First Column</button>
+        <button type="button" data-testid="unfreeze-panes">Unfreeze Panes</button>
         <button type="button" data-testid="open-ai-panel">AI panel</button>
         <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
         <button type="button" data-testid="open-macros-panel">Macros</button>
