feat(desktop): add Data/Queries Power Query management panel
- Add a Data / Queries panel to list Power Query queries, refresh/refresh-all with progress + cancellation, and open/duplicate/delete queries\n- Wire the panel + Query Editor through DesktopPowerQueryService and the refresh manager (including a lightweight "open-panel" event so panels can jump to each other)\n- Integrate credentials/OAuth2 using the existing secure credential store + oauth2 manager and surface auth status with sign in/out actions\n- Surface DLP/policy denials in per-query error summaries\n- Add unit tests for query runtime state + list derivation and an integration test asserting refresh output is applied to the document\n- Avoid hardcoded UI colors by using design tokens for the command palette backdrop

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -381,6 +381,7 @@
         <button type="button" data-testid="unfreeze-panes">Unfreeze Panes</button>
         <button type="button" data-testid="open-ai-panel">AI panel</button>
         <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
+        <button type="button" data-testid="open-data-queries-panel">Queries</button>
         <button type="button" data-testid="open-macros-panel">Macros</button>
         <button type="button" data-testid="open-script-editor-panel">Scripts</button>
         <button type="button" data-testid="open-python-panel">Python</button>
