--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -44,6 +44,7 @@
       </div>
       <div id="sheet-tabs" class="sheet-tabs" data-testid="sheet-tabs"></div>
       <div class="statusbar">
+        <div class="statusbar-mode" data-testid="status-mode">Ready</div>
         <div>
           Active:
           <code data-testid="active-cell">A1</code>
